// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifExpertApp debe contener el snapshot  1`] = `
<Fragment>
  <h2>
     GifExpertApp
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category={Array []}
      key=""
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en GifExpertApp debe mosttar una lista de categorias 1`] = `
<Fragment>
  <h2>
     GifExpertApp
  </h2>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category={
        Array [
          "One Punch",
        ]
      }
      key="One Punch"
    />
  </ol>
</Fragment>
`;
